--- a/src/test.html
+++ b/src/test.html
@@ -2,43 +2,52 @@
 <html lang="fr">
 	<head>
 	<meta charset="UTF-8" />
-	
-		<title>test</title>
+		<title>étoile</title>
 	</head>
 	<body>
-		
-		<!-- <img id='etoile2' src='../img/etoile_2.svg' alt='etoile2' width=25 height=25 /> -->
-		<svg width="200" height="200">	
-			<image x="50" y="50" width="100" height="100" xlink:href="../img/etoile_2.svg"
+		<svg width="40" height="40">	
+			<image x="10" y="10" width="20" height="20" xlink:href="../img/etoile_2.svg"
 			preserveAspectRatio="xMinYMin meet" >
 				<title>etoile 2</title>
-				<animateTransform id="two"
+				<! -- <animateTransform id="two"
 					attributeName="transform"
                     type="rotate"   
-					from="0 100 100" to="360 100 100"
+					from="0 20 20" to="360 20 20"
 					begin="0s" dur="5s"
                     repeatCount="indefinite"
 				/>
+				-->
+				<animateTransform
+					attributeName="transform"type="translate"
+					begin="0s" dur="1s"
+					values="20,20;-10,-10;20 20"
+					repeatCount="indefinite" />
+					
+					<animateTransform
+					attributeName="transform" type="scale"
+					additive="sum"
+					begin="0s" dur="1s"
+					values="0;1.5;0" repeatCount="indefinite" />
 			</image>
 			
-			<g transform="translate(50,50)">
-				<image x="50" y="50" width="100" height="100" xlink:href="../img/etoile_1.svg"
+
+				<image x="10" y="10" width="20" height="20" xlink:href="../img/etoile_1.svg"
 				preserveAspectRatio="xMinYMin meet" >
 					<title>etoile 1</title>
 					<animateTransform
 					attributeName="transform"type="translate"
-					begin="0s" dur="4s"
-					values="0,0;-50,-50;-100 -100"
+					begin="0s" dur="2s"
+					values="10,10;-10,-10;10 10"
 					repeatCount="indefinite"/>
 					
 					<animateTransform
 					attributeName="transform" type="scale"
 					additive="sum"
-					begin="0s" dur="4s"
-					values="0.5;1.5" repeatCount="indefinite" />
+					begin="0s" dur="2s"
+					values="0.5;1.5;0.5" repeatCount="indefinite" />
 
 				</image>
-			</g>
+			
 		</svg>		
 	</body>
 </html>
