--- a/src/nuages.html
+++ b/src/nuages.html
@@ -9,7 +9,7 @@
 			<image x="0" y="0" width="60" height="60"
 			xlink:href="../img/animations/eclair.svg"
 			preserveAspectRatio="xMinYMin meet" >
-				<title>nuage</title>
+				<title>eclair 1</title>
 				<animateTransform
 					attributeName="transform" type="scale"
 					begin="0s" dur="5s"
@@ -32,7 +32,7 @@
 			<image x="0" y="0" width="60" height="60"
 			xlink:href="../img/animations/eclair.svg"
 			preserveAspectRatio="xMinYMin meet" >
-				<title>nuage</title>
+				<title>eclair 2</title>
 				<animateTransform
 					attributeName="transform" type="scale"
 					begin="0s" dur="4s"
@@ -62,6 +62,18 @@
 					values="-100,0;100,0"
 					fill="freeze"
 					repeatCount="freeze" />
+					
+				<animateTransform
+					attributeName="transform" type="translate"
+					begin="5s" dur="6s"
+					values="100,0;100,0"
+					fill="freeze"
+					repeatCount="freeze" />
+					
+				<animateTransform
+					attributeName="transform" type="scale"
+					begin="5s" dur="1s"
+					values="1;0" />
 			</image>
 		</svg>		
 	</body>
