--- a/src/nuages.html
+++ b/src/nuages.html
@@ -52,28 +52,28 @@
 					fill="freeze" />	
 			</image>
 			
-			<image x="100" y="0" width="100" height="100"
+			<image x="0" y="0" width="100" height="100"
 			xlink:href="../img/animations/nuage.svg"
 			preserveAspectRatio="xMinYMin meet" >
 				<title>nuage</title>
 				<animateTransform
 					attributeName="transform" type="translate"
 					begin="0s" dur="3s"
-					values="-100,0;100,0"
-					fill="freeze"
-					repeatCount="freeze" />
+					values="-100,0;200,0"
+					fill="freeze" />
 					
 				<animateTransform
 					attributeName="transform" type="translate"
-					begin="5s" dur="6s"
-					values="100,0;100,0"
-					fill="freeze"
-					repeatCount="freeze" />
+					begin="5s" dur="1s"
+					values="200 0;250 50"
+					fill="freeze" />
 					
 				<animateTransform
 					attributeName="transform" type="scale"
 					begin="5s" dur="1s"
-					values="1;0" />
+					additive="sum"
+					values="1;0"
+					fill="freeze" />
 			</image>
 		</svg>		
 	</body>
