--- a/src/audio.html
+++ b/src/audio.html
@@ -6,15 +6,14 @@
 	</head>
 	<body>
 	test
-		<script src="/audiojs/audio.min.js"></script>
-		<script>
-		  audiojs.events.ready(function() {
-			var as = audiojs.createAll();
-		  });
-		</script>
+	<audio controls="controls" autoplay="autoplay" style="display:none;">
+      <source src="http://translate.google.com/translate_tts?tl=fr&q=%22Bonjour%22" type="audio/mpeg" />
+    </audio>
+		<!--
 		<script>
 		var audioElement = document.createElement('audio');
-		audioElement.setAttribute('src', "http://translate.google.com/translate_tts?tl=fr&q=%22Bonjour%22");
+		audioElement.setAttribute('user-agent', navigator.userAgent);
+		audioElement.setAttribute('src', "http://translate.google.com/translate_tts?tl=fr&q=%22Bonjour tout le monde%22");
 		document.write("<br>");
 		if(navigator.userAgent.indexOf("OPR")==109)
 		{
@@ -27,7 +26,9 @@
 		audioElement.setAttribute("type","audio/ogg");
 		document.write("<br>");
 		document.write(audioElement.getAttribute("type"));
-		audioElement.play();
-		</script>
+		audioElement.type= "audio/mpeg";
+		audioElement.play();//marche pas sous Opera, Safari, IE, en fait ça marche pas sous grand chose...
+		//pour info Safari ne supporte carrement pas les audio tag... ><
+		</script>-->
 	</body>
 </html>
