--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<script type="text/javascript" src="../js/js.js"></script>
+		<script type="text/javascript" src="../js/tirage.js"></script>
 		<meta http-equiv="Access-Control-Allow-Origin" content="*">
 		<link rel="stylesheet" type="text/css" href="../css/base.css"/>
 		  <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
