--- a/src/index.html
+++ b/src/index.html
@@ -74,11 +74,10 @@
 								height="100%" type="image/svg+xml" />
 					</object>
 				</foreignObject>
-					<g transform="translate(750,0) scale(-1,1)">
-						<foreignObject id="herbe3" x="0px" y="51.4%"  width="20%" height="100%">
-							<object data="../img/herbe.svg" width="100%"
+						<foreignObject id="herbe3" x="590px" y="51.4%"  width="20%" height="100%">
+							<object data="../img/herbe_sym.svg" width="100%"
 								type="image/svg+xml">
-									<embed src="../img/herbe.svg" width="100%"
+									<embed src="../img/herbe_sym.svg" width="100%"
 										height="100%" type="image/svg+xml" />
 							</object>
 						</foreignObject>
@@ -134,7 +133,7 @@
 			
 			
 			
-			
+		<!--	
 			
 			<foreignObject id="panneau_sortie" x="80%" y="70%"  width="20%" height="100%" onclick="">
 				<object data="../img/panneau.svg" width="100%"
@@ -144,6 +143,7 @@
 				</object>
 			</foreignObject>
 		</svg>
+-->
 		<!--
 		<svg>
 			<script type="text/ecmascript"><![CDATA[
