--- a/src/index.html
+++ b/src/index.html
@@ -168,6 +168,7 @@ console.log(paysage.outerWidth(true));
 		style="fill:rgb(170,222,135)"/>
 	-->	
 	</svg>
+</svg>
 	</div>
 
 <!--	<script>var svg = document.getElementsByTagName('object')[0].contentDocument.getElementsByTagName('svg')[0];
