--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<script type="text/javascript" src="../js/js.js"></script>
 		<script type="text/javascript" src="../js/tirage.js"></script>
+		<script type="text/javascript" src="http://jqueryrotate.googlecode.com/svn/trunk/jQueryRotate.js"></script>
 		<meta http-equiv="Access-Control-Allow-Origin" content="*">
 		<link rel="stylesheet" type="text/css" href="../css/base.css"/>
 		  <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
