--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,10 @@
 	<head>
 		<script type="text/javascript" src="../js/js.js"></script>
 		<script type="text/javascript" src="../js/tirage.js"></script>
-		<script type="text/javascript" src="http://jqueryrotate.googlecode.com/svn/trunk/jQueryRotate.js"></script>
 		<meta http-equiv="Access-Control-Allow-Origin" content="*">
 		<link rel="stylesheet" type="text/css" href="../css/base.css"/>
 		  <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+		<script type="text/javascript" src="http://jqueryrotate.googlecode.com/svn/trunk/jQueryRotate.js"></script>
 		<title>Titre</title>
 	<script>
 		function setup()
@@ -34,9 +34,9 @@
 				</object>
 			</foreignObject>
 			<foreignObject id="soleil" x="5%" y="5%" width="10%" height="100%">
-				<object data="../img/soleil.svg" width="100%"
+				<object id="animSoleil" data="../img/soleil.svg" width="100%"
 					type="image/svg+xml">
-						<embed src="../img/soleil.svg" width="100%"
+						<embed id="embSoleil" src="../img/soleil.svg" width="100%"
 							height="100%" type="image/svg+xml" />
 				</object>
 			</foreignObject>
