--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,6 @@
 	<body onLoad="setup();">
 	<div id="ma_div">
 		<svg id="base"  width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" onload='Init(evt)'>
-			<!-- onload="init(evt)"><svg onclick='alert("a")' id="base"  width="100%" height="100%" xmlns="http://www.w3.org/2000/svg">-->
-			<!-- onload="init(evt)">			<script type="text/ecmascript"><![CDATA[
-				function init(evt) {
-  				svgDocument = evt.target.ownerDocument;
-				}
-			]]></script>-->
 		<svg id="svg1" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMinYMin meet" viewBox="0 0 1600 1200">
 
 			<foreignObject id="paysage" x="0" y="60px" width="150%" height="100%">
@@ -61,12 +55,6 @@
 							height="100%" type="image/svg+xml" />
 				</object>
 			</foreignObject>
-			<!--<script>
-			var sys = require('sys')
-			var exec = require('child_process').exec;
-			function puts(error, stdout, stderr) { sys.puts(stdout) }
-			exec("ls -la", puts);
-			</script>-->
 			<svg id="panneau_affiche" x="400px" y="300px" width="50%" height="100%" xmlns="http://www.w3.org/2000/svg">
 				<foreignObject id="panneau" x="0px" y="0px"  width="100%" height="100%">
 					<object data="../img/grand_panneau.svg" width="100%"
@@ -104,91 +92,10 @@
 							height="100%" type="image/svg+xml" />
 				</object>
 			</foreignObject>
-			<!--
-			<foreignObject id="test_lettre" x="208px" y="840px"  width="3%" height="100%">
-				<object id="test_lettre_obj" data="../img/Alphabet/Vectoriel/A.svg" width="100%"
-					type="image/svg+xml">
-						<embed src="../img/Alphabet/Vectoriel/A.svg" width="100%"
-							height="100%" type="image/svg+xml" />
-				</object>
-				
-			</foreignObject>-->
-			<!--
-			<object id="test_lettre" x="13%" y="70%"  width="3%" height="100%"
-			        data="../img/Alphabet/Vectoriel/A.svg"
-					type="image/svg+xml">
-						<embed src="../img/Alphabet/Vectoriel/A.svg" width="100%"
-							height="100%" type="image/svg+xml" />
-				</object>
-				
-			</foreignObject>
-			-->
-			<!--
-			<script type="text/javascript"> <![CDATA[
-			 var elem = document.getElementById('test_lettre').childNodes;
-			var i;
-			for (i=0;i<elem.length;i++){
-				elem[i].addEventListener('click', 'test');
-			console.log(elem[i]);
-			elem[i].onclick = "alert('aa')";
-        }
-		
-		document.getElementById('test_lettre').addEventListener("click",test,false);
-		
-    function test(e) {
-        alert("aa");
-    }
-			]]> </script>-->
-			<script>
-				//var lettre = $("#test_lettre");
-				//lettre.addEventListener('click','alert("b")',false);
-			</script>
-			
-			
-			
-			
-		<!--	
-			
-			<foreignObject id="panneau_sortie" x="80%" y="70%"  width="20%" height="100%" onclick="">
-				<object data="../img/panneau.svg" width="100%"
-					type="image/svg+xml">
-						<embed src="../img/panneau.svg" width="100%"
-							height="100%" type="image/svg+xml" />
-				</object>
-			</foreignObject>
-		</svg>
--->
-		<!--
-		<svg>
-			<script type="text/ecmascript"><![CDATA[
-				function set_size_rect(evt)
-				{
-			/*	
-					//var paysage = document.getElementById("paysage");
-					var paysage = $("#svg1");
-					var rect = $("#rect1");
-//					rect.x="10px";
-					var x = paysage.outerWidth();
-console.log(x);
-console.log(paysage);
-console.log(rect);
-console.log(paysage.outerWidth(true));
-					rect.attr('x',"200px");					
-//rect.animate({x: "+=500px"},100);
-//*/
-				}
-			]]></script>
-		<rect id="rect1" onresize="set_size_rect(evt)" onload="set_size_rect(evt)"
-		x="100%" y="55%" width="100%" height="36%"
-		style="fill:rgb(170,222,135)"/>
-	-->	
 	</svg>
 </svg>
 	</div>
-
-<!--	<script>var svg = document.getElementsByTagName('object')[0].contentDocument.getElementsByTagName('svg')[0];
-	svg.addAttribute
-		svg.removeAttribute('width');
-		svg.removeAttribute('height');</script>-->
+	<div id="audio">
+	</div>
 	</body>
 </html>
