menu et tout et tout :-)

--- a/src/index.html
+++ b/src/index.html
@@ -31,32 +31,45 @@
 								height="100%" type="image/svg+xml" />
 					</object>
 				</foreignObject>
-				<foreignObject id="panneauptt" x="700px" y="750px"  width="50%" height="50%">
-					<object data="../img/panneau.svg" width="50%"
-						type="image/svg+xml">
-							<embed src="../img/panneau.svg" width="50%"
-								height="50%" type="image/svg+xml" />
-					</object>
-				</foreignObject>
-				<svg xmlns="http://www.w3.org/2000/svg" transform="rotate(340)">
-				  <a xlink:href="./jeu.html" target="_blank">
-					<text id="link" x="450" y="1125">Jouer</text>
-					<!--450 1125-->
-				  </a>
-				</svg> 
 				<!--<foreignObject id="link" x="450px" y="1050px" width="200" height="10%" transform="rotate(-20)">
 						<a href="./jeu.html">Jouer</a>
 				</foreignObject>-->
-				<foreignObject id="panneauptt2" x="150px" y="750px"  width="50%" height="50%">
+				<foreignObject id="panneauptt2" x="150px" y="725"  width="50%" height="30%">
 					<object data="../img/panneau2.svg" width="50%"
 						type="image/svg+xml">
 							<embed src="../img/panneau2.svg" width="50%"
 								height="50%" type="image/svg+xml" />
 					</object>
 				</foreignObject>
+				<foreignObject id="herbe" x="200px" y="900px"  width="30%" height="30%">
+					<object data="../img/herbe_sym.svg" width="50%"
+						type="image/svg+xml">
+							<embed src="../img/herbe_sym.svg" width="50%"
+								height="50%" type="image/svg+xml" />
+					</object>
+				</foreignObject>
 				<svg xmlns="http://www.w3.org/2000/svg">
-				  <a xlink:href="./aide.html" target="_blank">
-					<text id="link" x="550" y="720" transform="rotate(20)">Aide</text>
+				  <a xlink:href="./aide.html">
+					<text id="link" x="550" y="685" transform="rotate(20)">Aide</text>
+				  </a>
+				</svg> 
+				<foreignObject id="panneauptt" x="750px" y="725px"  width="50%" height="50%">
+					<object data="../img/panneau.svg" width="50%"
+						type="image/svg+xml">
+							<embed src="../img/panneau.svg" width="50%"
+								height="50%" type="image/svg+xml" />
+					</object>
+				</foreignObject>
+				<foreignObject id="herbe2" x="870px" y="920px"  width="30%" height="30%">
+					<object data="../img/herbe.svg" width="50%"
+						type="image/svg+xml">
+							<embed src="../img/herbe.svg" width="50%"
+								height="50%" type="image/svg+xml" />
+					</object>
+				</foreignObject>
+				<svg xmlns="http://www.w3.org/2000/svg" transform="rotate(340)">
+				  <a xlink:href="./jeu.html" >
+					<text id="link" x="500" y="1125">Jouer</text>
 					<!--450 1125-->
 				  </a>
 				</svg> 
