--- a/src/jeu.html
+++ b/src/jeu.html
@@ -92,6 +92,25 @@
 							height="100%" type="image/svg+xml" />
 				</object>
 			</foreignObject>
+			<foreignObject id="panneauptt2" x="1250px" y="825"  width="50%" height="30%">
+				<object data="../img/panneau.svg" width="50%"
+					type="image/svg+xml">
+						<embed src="../img/panneau2.svg" width="50%"
+							height="50%" type="image/svg+xml" />
+				</object>
+			</foreignObject>
+			<foreignObject id="herbe" x="1370px" y="1000px"  width="30%" height="30%">
+				<object data="../img/herbe.svg" width="50%"
+					type="image/svg+xml">
+						<embed src="../img/herbe_sym.svg" width="50%"
+							height="50%" type="image/svg+xml" />
+				</object>
+			</foreignObject>
+			<svg xmlns="http://www.w3.org/2000/svg">
+			  <a xlink:href="./index.html">
+				<text id="link" x="930" y="1400" transform="rotate(-20)">Retour</text>
+			  </a>
+			</svg> 
 	</svg>
 </svg>
 	</div>
