--- a/src/aide.html
+++ b/src/aide.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 	<div id="ma_div">
-		<svg id="base"  width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" onload='Init(evt)'>
+		<svg id="base"  width="100%" height="100%" xmlns="http://www.w3.org/2000/svg">
 			<svg id="svg1" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMinYMin meet" viewBox="0 0 1600 1200">
 
 				<foreignObject id="paysage" x="0" y="60px" width="150%" height="100%">
@@ -67,7 +67,26 @@
 							</p>
 						
 					</foreignObject>
+					<foreignObject id="panneauptt2" x="950px" y="625"  width="50%" height="30%">
+						<object data="../img/panneau.svg" width="50%"
+							type="image/svg+xml">
+								<embed src="../img/panneau2.svg" width="50%"
+									height="50%" type="image/svg+xml" />
+						</object>
+					</foreignObject>
+					<foreignObject id="herbe" x="1070px" y="800px"  width="30%" height="30%">
+						<object data="../img/herbe.svg" width="50%"
+							type="image/svg+xml">
+								<embed src="../img/herbe_sym.svg" width="50%"
+									height="50%" type="image/svg+xml" />
+						</object>
+					</foreignObject>
 				</svg>
+				<svg xmlns="http://www.w3.org/2000/svg">
+				  <a xlink:href="./index.html">
+					<text id="link" x="650" y="1300" transform="rotate(-20)">Retour</text>
+				  </a>
+				</svg> 
 			</svg>
 		</svg>
 	</div>
