--- a/src/aide.html
+++ b/src/aide.html
@@ -62,8 +62,8 @@
 							<br/>
 							<h1>Annexes</h1>
 							<p>
-								<a href="../Dossier_de_conception.pdf">Dossier de conception</a><br />
-								<a href="../Dossier_aide_technique.pdf">Aide technique</a>
+								<a href="../Dossier_de_conception.pdf" target="_blank">Dossier de conception</a><br />
+								<a href="../Dossier_aide_technique.pdf" target="_blank">Aide technique</a>
 							</p>
 						
 					</foreignObject>
