--- a/src/jeu.html
+++ b/src/jeu.html
@@ -16,8 +16,6 @@
 		</script>
 	</head>
 	<body onLoad="setup();" oncontextmenu="return false;" ondragstart="return false">
-	<div id="curseur">
-	</div>
 	<div id="ma_div">
 		<svg id="base"  width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" onload='Init(evt)' >
 		<svg id="svg1" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMinYMin meet" viewBox="0 0 1600 1200">
@@ -117,6 +115,8 @@
 </svg>
 	</div>
 	<div id="audio">
+	</div>
+	<div id="curseur" onClick="click();">
 	</div>
 	</body>
 </html>
