--- a/src/jeu.html
+++ b/src/jeu.html
@@ -92,6 +92,25 @@
 							height="100%" type="image/svg+xml" />
 				</object>
 			</foreignObject>
+			
+			<foreignObject id="panneauplat" x="600px" y="825"  width="100%" height="100%">
+				<object data="../img/panneau_plat.svg" width="25%"
+					type="image/svg+xml">
+						<embed src="../img/panneau_plat.svg" width="25%"
+							height="25%" type="image/svg+xml" />
+				</object>
+			</foreignObject>
+			<foreignObject id="herbe" x="700px" y="1000px"  width="30%" height="30%">
+				<object data="../img/herbe.svg" width="50%"
+					type="image/svg+xml">
+						<embed src="../img/herbe_sym.svg" width="50%"
+							height="50%" type="image/svg+xml" />
+				</object>
+			</foreignObject>
+			<script>function consigne(){rejouer_consigne();}</script>
+			<svg xmlns="http://www.w3.org/2000/svg">
+				<text id="link" x="650" y="930" onclick="consigne();">Consigne</text>
+			</svg>
 			<foreignObject id="panneauptt2" x="1150px" y="825"  width="50%" height="30%">
 				<object data="../img/panneau.svg" width="50%"
 					type="image/svg+xml">
@@ -110,32 +129,13 @@
 			  <a xlink:href="./index.html">
 				<text id="link" x="830" y="1370" transform="rotate(-20)">Retour</text>
 			  </a>
-			</svg> 
-			<foreignObject id="panneauplat" x="600px" y="825"  width="100%" height="100%">
-				<object data="../img/panneau_plat.svg" width="25%"
-					type="image/svg+xml">
-						<embed src="../img/panneau_plat.svg" width="25%"
-							height="25%" type="image/svg+xml" />
-				</object>
-			</foreignObject>
-			<foreignObject id="herbe" x="700px" y="1000px"  width="30%" height="30%">
-				<object data="../img/herbe.svg" width="50%"
-					type="image/svg+xml">
-						<embed src="../img/herbe_sym.svg" width="50%"
-							height="50%" type="image/svg+xml" />
-				</object>
-			</foreignObject>
-			<svg xmlns="http://www.w3.org/2000/svg">
-			  <a xlink:href="./index.html">
-				<text id="link" x="650" y="930" >Consigne</text>
-			  </a>
 			</svg> 			
 	</svg>
 </svg>
 	</div>
 	<div id="audio">
 	</div>
-	<div id="curseur" onClick="click();">
+	<!--<div id="curseur" onClick="click();">-->
 	</div>
 	</body>
 </html>
