--- a/src/aide.html
+++ b/src/aide.html
@@ -84,7 +84,7 @@
 				</svg>
 				<svg xmlns="http://www.w3.org/2000/svg">
 				  <a xlink:href="./index.html">
-					<text id="link" x="650" y="1300" transform="rotate(-20)">Retour</text>
+					<text class="link" x="650" y="1300" transform="rotate(-20)">Retour</text>
 				  </a>
 				</svg> 
 			</svg>
