--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
 				</foreignObject>
 				<svg xmlns="http://www.w3.org/2000/svg">
 				  <a xlink:href="./aide.html" >
-					<text id="link" x="550" y="685" transform="rotate(20)">Aide</text>
+					<text class="link" x="550" y="685" transform="rotate(20)">Aide</text>
 				  </a>
 				</svg> 
 				<foreignObject id="panneauptt" x="750px" y="725px"  width="50%" height="50%">
@@ -68,7 +68,7 @@
 				</foreignObject>
 				<svg xmlns="http://www.w3.org/2000/svg" transform="rotate(340)">
 				  <a xlink:href="./jeu.html" >
-					<text id="link" x="500" y="1125">Jouer</text>
+					<text class="link" x="500" y="1125">Jouer</text>
 					<!--450 1125-->
 				  </a>
 				</svg> 
