--- a/src/jeu.html
+++ b/src/jeu.html
@@ -92,24 +92,9 @@
 							height="100%" type="image/svg+xml" />
 				</object>
 			</foreignObject>
-			
-			<foreignObject id="panneauplat" x="600px" y="825"  width="100%" height="100%">
-				<object data="../img/panneau_plat.svg" width="25%"
-					type="image/svg+xml">
-						<embed src="../img/panneau_plat.svg" width="25%"
-							height="25%" type="image/svg+xml" />
-				</object>
-			</foreignObject>
-			<foreignObject id="herbe" x="700px" y="1000px"  width="30%" height="30%">
-				<object data="../img/herbe.svg" width="50%"
-					type="image/svg+xml">
-						<embed src="../img/herbe_sym.svg" width="50%"
-							height="50%" type="image/svg+xml" />
-				</object>
-			</foreignObject>
-			<script>function consigne(){rejouer_consigne();}</script>
 			<svg xmlns="http://www.w3.org/2000/svg">
-				<text id="link" x="650" y="930" onclick="consigne();">Consigne</text>
+			<script>function consigne(){click_consigne();}</script>
+				<text id="consigne" class="link" x="58" y="1070" onclick="consigne();">Consigne</text>
 			</svg>
 			<foreignObject id="panneauptt2" x="1150px" y="825"  width="50%" height="30%">
 				<object data="../img/panneau.svg" width="50%"
@@ -127,7 +112,7 @@
 			</foreignObject>
 			<svg xmlns="http://www.w3.org/2000/svg">
 			  <a xlink:href="./index.html">
-				<text id="link" x="830" y="1370" transform="rotate(-20)">Retour</text>
+				<text class="link" x="830" y="1370" transform="rotate(-20)">Retour</text>
 			  </a>
 			</svg> 			
 	</svg>
