--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
 								height="50%" type="image/svg+xml" />
 					</object>
 				</foreignObject>
-				<svg xmlns="http://www.w3.org/2000/svg">
+				<svg xmlns="http://www.w3.org/2000/svg" onclick="aide();" >
 				  <a xlink:href="./aide.html" >
 					<text class="link" x="550" y="685" transform="rotate(20)">Aide</text>
 				  </a>
