--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,11 @@
 	</head>
 	<body>
 	<div id="ma_div">
+		<script>
+			.on("contextmenu", function(data, index) {
+				 alert('test');
+			});
+		</script>
 		<svg id="base"  width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" >
 			<svg id="svg1" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMinYMin meet" viewBox="0 0 1600 1200">
 				<foreignObject id="paysage" x="0" y="60px" width="150%" height="100%">
@@ -33,7 +38,7 @@
 				<!--<foreignObject id="link" x="450px" y="1050px" width="200" height="10%" transform="rotate(-20)">
 						<a href="./jeu.html">Jouer</a>
 				</foreignObject>-->
-				<foreignObject id="panneauptt2" x="150px" y="725"  width="50%" height="30%">
+				<foreignObject class="boite" id="panneauptt2" x="150px" y="725"  width="50%" height="30%">
 					<object data="../img/panneau2.svg" width="50%"
 						type="image/svg+xml">
 							<embed src="../img/panneau2.svg" width="50%"
@@ -51,10 +56,10 @@
 				  <a xlink:href="./aide.html" >
 					<text class="link" x="550" y="685" transform="rotate(20)">Aide</text>
 				  </a>
-				</svg> 
-				<foreignObject id="panneauptt" x="750px" y="725px"  width="50%" height="50%">
+				</svg>
+				<foreignObject class="boite" id="panneauptt" onclick="alert('click')" x="750px" y="725px"  width="50%" height="50%">
 					<object data="../img/panneau.svg" width="50%"
-						type="image/svg+xml">
+						type="image/svg+xml"  >
 							<embed src="../img/panneau.svg" width="50%"
 								height="50%" type="image/svg+xml" />
 					</object>
@@ -75,6 +80,8 @@
 			</svg>
 		</svg>
 	</div>
+	<!--<div id="curseur">
+	</div>-->
 	</body>
 </html>
 
