--- a/src/aide.html
+++ b/src/aide.html
@@ -68,9 +68,9 @@
 						
 					</foreignObject>
 					<foreignObject id="panneauptt2" x="950px" y="625"  width="50%" height="30%">
-						<object data="../img/panneau.svg" width="50%"
+						<object data="../img/panneau_retour.svg" width="50%"
 							type="image/svg+xml">
-								<embed src="../img/panneau2.svg" width="50%"
+								<embed src="../img/panneau_retour.svg" width="50%"
 									height="50%" type="image/svg+xml" />
 						</object>
 					</foreignObject>
@@ -86,7 +86,7 @@
 				  <a xlink:href="./index.html">
 					<text class="link" x="650" y="1300" transform="rotate(-20)">Retour</text>
 				  </a>
-				</svg> 
+				</svg>
 			</svg>
 		</svg>
 	</div>
