--- a/src/index.html
+++ b/src/index.html
@@ -34,9 +34,9 @@
 						<a href="./jeu.html">Jouer</a>
 				</foreignObject>-->
 				<foreignObject class="boite" id="panneauptt2" x="150px" y="725"  width="50%" height="30%">
-					<object data="../img/panneau2.svg" width="50%"
+					<object data="../img/panneau_aide.svg" width="50%"
 						type="image/svg+xml">
-							<embed src="../img/panneau2.svg" width="50%"
+							<embed src="../img/panneau_aide.svg" width="50%"
 								height="50%" type="image/svg+xml" />
 					</object>
 				</foreignObject>
@@ -52,11 +52,10 @@
 					<text class="link" x="550" y="685" transform="rotate(20)">Aide</text>
 				  </a>
 				</svg>
-				<script>function jouer(){alert('click');} </script>
-				<foreignObject class="boite" id="panneauptt" onclick="jouer();" x="750px" y="725px"  width="50%" height="50%">
-					<object data="../img/panneau.svg" width="50%"
+				<foreignObject class="boite" id="panneauptt" x="750px" y="725px"  width="50%" height="50%">
+					<object data="../img/panneau_jeu.svg" width="50%"
 						type="image/svg+xml"  >
-							<embed src="../img/panneau.svg" width="50%"
+							<embed src="../img/panneau_jeu.svg" width="50%"
 								height="50%" type="image/svg+xml" />
 					</object>
 				</foreignObject>
@@ -70,9 +69,8 @@
 				<svg xmlns="http://www.w3.org/2000/svg" transform="rotate(340)">
 				  <a xlink:href="./jeu.html" >
 					<text class="link" x="500" y="1125">Jouer</text>
-					<!--450 1125-->
 				  </a>
-				</svg> 
+				</svg>
 			</svg>
 		</svg>
 	</div>
