--- a/src/jeu.html
+++ b/src/jeu.html
@@ -97,9 +97,9 @@
 				<text id="consigne" class="link" x="58" y="1070" onclick="consigne();">Consigne</text>
 			</svg>
 			<foreignObject id="panneauptt2" x="1150px" y="825"  width="50%" height="30%">
-				<object data="../img/panneau.svg" width="50%"
+				<object data="../img/panneau_retour.svg" width="50%"
 					type="image/svg+xml">
-						<embed src="../img/panneau2.svg" width="50%"
+						<embed src="../img/panneau_retour.svg" width="50%"
 							height="50%" type="image/svg+xml" />
 				</object>
 			</foreignObject>
